deploy/promlens-openshift.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: promlens
spec:
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: promlens
  name: promlens
  namespace: promlens
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: promlens
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: promlens
    spec:
      containers:
      - image: quay.io/mdewald/promlens
        imagePullPolicy: Always
        name: promlens
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        command: ["/bin/promlens", "--web.proxy-prometheus-url=https://prometheus-k8s.openshift-monitoring.svc:9091"]
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: promlens
  name: promlens
  namespace: promlens
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: promlens
    weight: 100
  wildcardPolicy: None
